2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Move to ../libviengoos/viengoos.  Update references.
	* addr-trans.h: Likewise.
	* addr.h: Likewise.
	* cap.h: Likewise.
	* folio.h: Likewise.
	* futex.h: Likewise.
	* ipc.h: Likewise.
	* message.h: Likewise.
	* messenger.h: Likewise.
	* rpc.h: Likewise.
	* thread.h: Move viengoos specific bits...
	* ../libviengoos/viengoos/thread.h: ... to this new file.
	* thread.h (struct hurd_utcb): New structure.
	* exceptions.h (hurd_utcb): Use a struct hurd_utcb *, not a
	struct vg_utcb *.  Update users.
	(hurd_activation_state_alloc): Likewise.
	(hurd_activation_state_free): Likewise.
	(hurd_activation_handler_activated): Likewise.
	(hurd_activation_handler_normal): Likewise.
	* t-addr-trans.c: Move to ../libviengoos.
	* t-addr.c: Likewise.
	* t-rpc.c: Likewise.
	* Makefile.am (TESTS, check_PROGRAMS, t_addr_CPPFLAGS)
	(t_addr_SOURCES, t_addr_trans_CPPFLAGS, t_addr_trans_SOURCES)
	(t_rpc_CPPFLAGS, t_rpc_SOURCES): Move from this file...
	* ../libviengoos/Makefile.am.
	* Makefile.am (includehurd_HEADERS): Don't mention activity.h,
	addr-trans.h, addr.h, cap.h, folio.h, futex.h, ipc.h, message.h or
	messenger.h.
	* headers.m4: Don't create a link to hurd/addr.h,
	hurd/addr-trans.h, hurd/cap.h, hurd/folio.h, hurd/rpc.h,
	hurd/activity.h, hurd/futex.h, hurd/message.h, hurd/messenger.h or
	hurd/ipc.h.
	
2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* thread.h (struct vg_utcb): Remove field saved_thread_state.

2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* addr-trans.h: Don't include <l4/types.h>.  Include <stdint.h>
	and <hurd/math.h>.
	(struct cap_addr_trans): Replace l4 types with standard types.
	(CAP_ADDR_TRANS_GUARD): Likewise.
	(CAP_ADDR_TRANS_SET_GUARD_SUBPAGE): Use vg_msb, not l4_msb.
	(CAP_ADDR_TRANS_VALID): Replace l4 types with standard types.  Use
	vg_msb, not l4_msb.
	* t-addr.c (main): Replace use of l4_msb64 with vg_msg64 and
	l4_lsb64 with vg_lsg64.

	* types.h: Don't include <l4/types.h>.
