@@ -20,6 +20,4 @@ AC_CONFIG_LINKS([sysroot/include/hurd/stddef.h:hurd/stddef.h
 		 sysroot/include/hurd/mutex.h:hurd/mutex.h
 		 sysroot/include/hurd/rmutex.h:hurd/rmutex.h
 		 sysroot/include/hurd/error.h:hurd/error.h
-		 sysroot/include/hurd/math.h:hurd/math.h
-		 sysroot/include/hurd/bits/math.h:hurd/bits/${arch}/math.h
 		])
