@@ -1,5 +1,11 @@
 2008-12-17  Neal H. Walfield  <neal@gnu.org>
 
+	* math.h: Move to ../libviengoos/viengoos.  Update users.
+	* bits/ia32/math.h: Remove file.
+	* headers.m4: Don't link hurd/math.h or hurd/bits/math.h.
+
+2008-12-17  Neal H. Walfield  <neal@gnu.org>
+
 	* activity.h: Move to ../libviengoos/viengoos.  Update references.
 	* addr-trans.h: Likewise.
 	* addr.h: Likewise.
